<resources>
    <string name="app_name">CanteenChecker.AdminApp</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_waiting_time">Current Waiting Time</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_title">Title</string>
    <string name="text_address">Address</string>
    <string name="text_website">Website</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_dish_of_the_day">Dish of the day</string>
    <string name="text_sample_dishprice">9.99</string>
    <string name="text_ratings_and_reviews">Ratings and Reviews</string>
    <string name="text_five">5</string>
    <string name="text_four">4</string>
    <string name="text_three">3</string>
    <string name="text_two">2</string>
    <string name="text_one">1</string>
    <string name="text_show_reviews">Show Reviews</string>
    <string name="text_new_waiting_time">New waiting time</string>
    <string name="text_send">Send\n</string>
    <string name="message_waitingtime_updated">Waiting time has been updated.</string>
    <string name="message_waitingtime_not_updated">Waiting time cannot be updated.</string>
    <string name="new_dish_of_the_day">New dish of the day</string>
    <string name="text_new_price">New price</string>
    <string name="text_change_dish_of_the_day">Change dish of the day\n</string>
    <string name="error_dish_name">The dish name shouldn\'t be empty</string>
    <string name="error_dish_price">Please set a realistic dish price, your canteen should stay profitable</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_review">Are you sure to delete this review?</string>
    <string name="tag_map_fragment" translatable="false">MapFragment</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_website">Enter Website</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_canteen_name">Enter canteen name</string>
    <string name="save">Save</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="successfully_updated_canteen">Successfully updated canteen</string>
    <string name="error_updating_canteen">Error updating canteen</string>
    <string name="invalid_location">Invalid location</string>
    <string name="error_login">Login not successful - please try again</string>
    <string name="failed_to_delete_review">Failed to delete review</string>
    <string name="review_deleted">Review deleted</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="message_review_deletion">Do you really want to delete this review?</string>
    <string name="delete_review">Delete Review</string>
    <string name="error_load_reviews">Cannot load reviews - please try again</string>
    <string name="title_reviews">Reviews</string>
</resources>