<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/distance_medium">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUserName"
        android:hint="@string/hint_user_name"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:layout_marginTop="@dimen/distance_small"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/text_login"
        android:layout_marginTop="@dimen/distance_small" />

</LinearLayout>